# hermes2

./: .env.example  .gitignore  API_CONTRACT.md  CLAUDE.md  Diagrama_Proceso.md  Diagrama_Secuencia.md  PLAN.md  Proceso.md  README.md  debug_paginacion.py  iniciar.bat  lista_prueba.csv  main.py  prueba_lista.py  pyproject.toml  test_api.bat
scripts/: inspect_login.py  inspect_policy_page.py  inspect_search.py  test_busqueda.py  test_login.py  test_session_manager.py  test_use_case.py
src/: config.py
src/adapters/inbound/: api.py  schemas.py
src/adapters/outbound/: local_storage.py  playwright_consultador.py
src/adapters/outbound/pages/: login_page.py  policy_page.py  results_page.py  search_page.py
src/application/: session_manager.py  use_cases.py
src/domain/: entities.py  exceptions.py  ports.py  value_objects.py
src/infrastructure/: logger.py
tests/: test_local_storage.py  test_results_page_timeout.py
